@startuml
'https://plantuml.com/class-diagram

class Persona {
  - nombre: String
  - apellido: String
  - edad: int
  - documento: double
  - perrito: Perro
  + Persona()
  + Persona(nombre: String, apellido: String, edad: int, documento: double)
  + getNombre(): String
  + setNombre(nombre: String): void
  + getApellido(): String
  + setApellido(apellido: String): void
  + getEdad(): int
  + setEdad(edad: int): void
  + getDocumento(): double
  + setDocumento(documento: double): void
  + getPerrito(): Perro
  + setPerrito(perrito: Perro): void
  + toString(): String
}

class Perro {
  - nombre: String
  - raza: String
  - edad: int
  - tamanio: String
  - adoptado: boolean
  + Perro()
  + Perro(nombre: String, raza: String, edad: int, tamanio: String, adoptado: boolean)
  + getNombre(): String
  + setNombre(nombre: String): void
  + getRaza(): String
  + setRaza(raza: String): void
  + getEdad(): int
  + setEdad(edad: int): void
  + getTamanio(): String
  + setTamanio(tamanio: String): void
  + isAdoptado(): boolean
  + setAdoptado(adoptado: boolean): void
  + toString(): String
}

class PersonaPerroServices {
  - perrosDisponibles: List<Perro>
  - personas: List<Persona>
  + PersonaPerroServices()
  + inicializarObjetosPorDefecto(): void
  + crearPersona(): Persona
  + crearPerro(): Perro
  + mostrarPersonas(): void
  + mostrarPerros(): void
  + adoptarPerro(): void
  + mostrarMenu(): void
}

Persona --> "*" Perro: has
PersonaPerroServices --> Persona: uses
PersonaPerroServices --> Perro: uses

@enduml
